[gd_scene load_steps=14 format=3 uid="uid://c3m5l4c8oh7c"]

[ext_resource type="Script" path="res://scenes/npc/town_npc.gd" id="1_bvetm"]
[ext_resource type="Texture2D" uid="uid://dg6wk5r0bo0bf" path="res://assets/characters/npc-spritesheet.png" id="2_4oqjh"]

[sub_resource type="Animation" id="Animation_8efc8"]
length = 0.001

[sub_resource type="Animation" id="Animation_uvne4"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3vgkx"]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lmyb8"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_aif67"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_4i22a"]
resource_name = "walk_down"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 5, 9]
}

[sub_resource type="Animation" id="Animation_j7w40"]
resource_name = "walk_left"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 8]
}

[sub_resource type="Animation" id="Animation_ya02p"]
resource_name = "walk_right"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 7, 11]
}

[sub_resource type="Animation" id="Animation_upcdn"]
resource_name = "walk_up"
length = 0.45
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 6, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kagjs"]
_data = {
"RESET": SubResource("Animation_8efc8"),
"idle_down": SubResource("Animation_uvne4"),
"idle_left": SubResource("Animation_3vgkx"),
"idle_right": SubResource("Animation_lmyb8"),
"idle_up": SubResource("Animation_aif67"),
"walk_down": SubResource("Animation_4i22a"),
"walk_left": SubResource("Animation_j7w40"),
"walk_right": SubResource("Animation_ya02p"),
"walk_up": SubResource("Animation_upcdn")
}

[sub_resource type="Curve2D" id="Curve2D_j3vpw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 123.2, 200, 0, 0, 0, 0, 123.2, 128, 0, 0, 0, 0, 228.8, 128, 0, 0, 0, 0, 228.8, 256, 0, 0, 0, 0, 123.2, 256, 0, 0, 0, 0, 123.2, 200)
}
point_count = 6

[node name="TownNPC" type="CharacterBody2D"]
script = ExtResource("1_bvetm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("2_4oqjh")
hframes = 4
vframes = 3
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kagjs")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)

[node name="InteractionArea" type="Area2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
top_level = true
curve = SubResource("Curve2D_j3vpw")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(123.2, 200)
rotation = -1.5708
rotates = false

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
